# pianola

./: .gitignore  Integration.hs  LICENSE  README.md  ]  octave-core  pianola.cabal  run_tests.rb  xanela.cabal
backends/java-swing/: README.md  pom.xml
backends/java-swing-testapp/: README.md  pom.xml
backends/java-swing-testapp/src/main/java/info/danidiaz/pianola/testapp/: Main.java  TestAppFrame.java
backends/java-swing-testapp/src/main/java/info/danidiaz/xanela/testapp/: Main.java
backends/java-swing-testapp/src/test/java/info/danidiaz/xanela/testapp/: MainTest.java
backends/java-swing/src/main/java/info/danidiaz/pianola/driver/: Driver.java  ImageBin.java  Snapshot.java
backends/java-swing/src/main/java/info/danidiaz/xanela/driver/: Driver.java  ImageBin.java  Snapshot.java
backends/java-swing/src/test/java/info/danidiaz/xanela/driver/: AppTest.java
backends/remote-robot/: pom.xml
backends/remote-robot-testapp/src/main/java/info/danidiaz/pianola/robot/: Main.java
backends/remote-robot/src/main/java/info/danidiaz/pianola/robot/: Main.java
examples/: README.md  dbvisualizer.hs
integration/: integration.cabal
integration/apps/java-swing-testapp/: README.md
integration/apps/java-swing-testapp/src/main/java/info/danidiaz/pianola/testapp/: Main.java  TestAppFrame.java
integration/apps/remote-robot-testapp/: README.md  pom.xml
integration/src/: Main.hs
src/: Main.hs  Pianola.hs  Xanela.hs
src-main/: Main.hs
src/Pianola/: Driver.hs  Geometry.hs  Internal.hs  Main.hs  MakeMain.hs  Orphans.hs  Pianola.hs  Player.hs  Protocol.hs  Swing.hs  Tutorial.hs  Types.hs  Util.hs
src/Pianola/Model/: Swing.hs
src/Pianola/Model/Protocol/: IO.hs
src/Pianola/Model/Swing/: Combinators.hs  Driver.hs  Protocol.hs
src/Pianola/Pianola/: Driver.hs
src/Pianola/Protocol/: IO.hs
src/Pianola/Swing/: Internal.hs  Protocol.hs
src/Xanela/: Combinators.hs  Logic.hs  Types.hs  Util.hs  Xanela.hs
src/Xanela/Types/: Combinators.hs  Protocol.hs
src/Xanela/Types/Protocol/: IO.hs
tests/: README.md  tests-pianola.hs
