name:          pianola
version:       0.1
license:       MIT
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    Daniel Díaz Carrete
category:      System
build-type:    Simple
cabal-version: >= 1.10

Library
    hs-source-dirs: src
    exposed-modules: 
        Pianola.Internal
        Pianola.Util
        Pianola.Geometry
        Pianola.Pianola
        Pianola.Pianola.Driver
        Pianola.Protocol
        Pianola.Protocol.IO
        Pianola.Model.Swing
        Pianola.Model.Swing.Driver
        Pianola.Model.Swing.Protocol
    other-modules: 
    build-depends:         
        base >= 4.4,    
        text >= 0.11,
        containers >= 0.4,
        bytestring >= 0.9,
        msgpack >= 0.7,
        iteratee >= 0.8,
        attoparsec >= 0.10,
        attoparsec-iteratee >= 0.3,
        filepath >= 1.3,
        network >= 2.4,
        logict >= 0.5,
        errors >= 1.3,
        either >= 3.4,
        pipes >= 3.1,
        free >= 3.2,
        comonad >= 3.0, 
        comonad-transformers >= 3.0, 
        streams >= 3.1,
        transformers >= 0.2,
        mtl >= 2.1
    default-language: Haskell2010
 
Test-suite test-pianola
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: tests-pianola.hs
    build-depends:   
        base >= 4.4,
        text >= 0.11,
        containers >= 0.4,
        filepath >= 1.3,
        network >= 2.4,
        errors >= 1.3,
        streams >= 3.1,
        transformers >= 0.2,
        pianola
    default-language: Haskell2010

Source-repository head
    type:     git
    location: https://github.com/danidiaz/pianola.git


