name:          pianola
version:       0.1.1
license:       MIT
license-file:  LICENSE
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
category:      Jvm, GUI
Synopsis:      Remotely controlling Java Swing applications
Description:   This is a library for remotely controlling 
               Java Swing desktop applications that have been 
               instrumented with a special pianola agent. 

               The agent exposes the Swing component hierarchy
               over the network, and accepts requests for 
               generating GUI events. The library handles the
               interaction on the Haskell side.
build-type:    Simple
cabal-version: >= 1.10
Extra-Source-Files:
    README.md
    tests/README.md

Library
    hs-source-dirs: src
    exposed-modules: 
        Pianola
        Pianola.Internal
        Pianola.Geometry
        Pianola.Player
        Pianola.Protocol
        Pianola.Protocol.IO
        Pianola.Swing
        Pianola.Swing.Internal
        Pianola.Swing.Protocol
        Pianola.Util
        Pianola.MakeMain
        Pianola.Tutorial
    other-modules: 
    build-depends:         
        base >= 4.4 && < 5,    
        text >= 1.1,
        containers >= 0.5,
        bytestring >= 0.10,
        attoparsec >= 0.11,
        filepath >= 1.3,
        -- In windows, install using cygwin 
        network >= 2.4.2.2, 
        logict >= 0.5,
        safe >= 0.3.3,
        pipes >= 4.1,
        pipes-attoparsec >= 0.5,
        pipes-bytestring >= 2.0,
        bifunctors >= 4.1,
        free >= 4.6,
        comonad >= 4.0, 
        transformers >= 0.3,
        mtl >= 2.1,
        lens >= 4.1,
        aeson >= 0.7,
        optparse-applicative >= 0.8.0.1
    default-language: Haskell2010
 
Test-suite test-pianola
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: tests-pianola.hs
    build-depends:   
        base >= 4.4,
        text >=  1.1.0.1,
        containers >= 0.5.5.1,
        filepath >= 1.3,
        network >= 2.4.2.2,
        transformers >= 0.3.0.0,
        pianola,
        mtl >= 2.1,
        lens >= 4.0.1,
        aeson >= 0.7.0.2,
        comonad >= 4.0.1 
    default-language: Haskell2010

Source-repository head
    type:     git
    location: https://github.com/danidiaz/pianola.git


