name:          integration
version:       0.0.1
data-files:    
author:        Daniel Díaz Carrete
maintainer:    diaz_carrete@yahoo.com
category:      Jvm, GUI
Synopsis:      Remotely controlling Java Swing applications
Description:   Integration tests for pianola
build-type:    Simple
cabal-version: >= 1.10

Executable pianola-integration-test-app
    hs-source-dirs: src
    main-is: Main.hs
    build-depends:   
        base >= 4.4,
        text >= 0.11,
        containers >= 0.4,
        filepath >= 1.3,
        network >= 2.4,
        transformers >= 0.2,
        mtl >= 2.1,
        lens >= 3.9.1,
        aeson >= 0.6.2.0,
        comonad >= 4.0,
        pianola
    default-language: Haskell2010


